2004-09-21  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Generate call to WSPIAPI_init in elaboration for wspiapi.h static data
	 initialization.

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	Remove dummy call to OSD.GetAddrInfo and OSD.FreeAddrInfo.

2004-09-21  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	Fix segmentation fault on Solaris and FreeBSD. Do not call
	 OSD.FreeAddrInfo with null pointer.

2004-09-21  Pascal Obry  <pascal@obry.org>

	* src/check_config.c:
	Back out previous change as it is not ok on FreeBSD after all.

2004-09-21  Pascal Obry  <pascal@obry.org>

	* src/check_config.c:
	Include <sys/types.h> to fix build failure on FreeBSD.

2004-09-20  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	Timeout on connect.

2004-09-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	(CVS_ID): Define for CVS macro to put the comment to the
	 generated file.

2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Add IPPROTO_TCP constant, not defined in AdaSockets.
	Use linker option -lws2_32 in Win32 anyway to link with AdaSockets.

	* aws-net-std__adasockets.adb:
	(Get_Addr_Info): New routine.
	(Bind): Use Get_Addr_Info routine together with Thin.C_Bind.
	 Catch exception only on socket creation.
	(Connect): Use Get_Addr_Info routine together with Thin.C_Connect.
	 Catch exception only on socket creation.
	Dummy call to FreeAddrInfo in the package initialization, for
	 initialize internal libwspiapi.a static data.

2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Pending): New routine.

2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Move here GetAddrInfo and FreeAddrInfo routines from AWS.Net.Thin.
	Add Windows 2000 support.

	* aws-net-std__gnat.adb:
	FreeAddrInfo use Addr_Info_Access parameter now.